--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AdminNavMenu.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AdminNavMenu.razor
@@ -70,6 +70,22 @@
                 </div>
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="" >
+                <div class="d-flex justify-content-between align-items-center"> 
+                    <i class="fas fa-globe ft-icon-dimension"></i>
+                    <span class="menu_item">WebSite</span>
+                </div>
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logoutcontrol">
+                <div class="d-flex justify-content-between align-items-center"> 
+                    <i class="fas fa-sign-out-alt ft-icon-dimension"></i>
+                    <span class="menu_item">Logout</span>
+                </div>
+            </NavLink>
+        </div>
         
         
 
