--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/MainLayout.razor.css
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/MainLayout.razor.css
@@ -1,11 +1,15 @@
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+.main-container {
+    display: grid;
+    gap: 20px;
+    padding: 10px;
+    place-items: center;
+    margin-left: 230px;
 }
+
 
 .page-top {
     display: flex;
+    min-width: 490px;
     border-bottom: 1px solid grey;
     height: 50px;
     justify-content: space-around;
@@ -15,46 +19,180 @@
     position: fixed;
     padding: 10px;
     gap: 15px;
+    z-index: 100;
+    left: 250px;
+    right: 0;
+    top: 0;
 }
-.page-top img{
-    height: 25px;
-}
-.page-top img:hover {
-    background-color:lightyellow;
-}
+
+    .page-top img {
+        height: 25px;
+    }
+
+        .page-top img:hover {
+            background-color: lightblue;
+        }
+
 .search-bar {
     display: flex;
     flex: 1;
     max-width: 450px;
 }
 
-.search-bar button{
-    border: none;
-}
+    .search-bar button {
+        border: none;
+    }
 
-.search-bar img{
-    height: 35px;
-    border: 1px solid darkblue;
-    margin-left: -7px;
-    margin-top: -1px;
-}
-.search-bar input{
-    height: 35px;
-    border: 1px solid darkblue;
-    width: 100%;
-    padding-left: 10px;
-    border-right: none;
-}
+    .search-bar img {
+        height: 35px;
+        border: 1px solid darkblue;
+        margin-left: -7px;
+        margin-top: -1px;
+    }
 
-.order-icon{
+    .search-bar input {
+        height: 35px;
+        border: 1px solid darkblue;
+        width: 100%;
+        padding-left: 10px;
+        border-right: none;
+    }
+
+.order-icon {
     margin-left: 4px;
 }
+
 .profile-icon, .admin-icon {
     margin-left: 6px;
 }
-.logout-icon{
-    margin-left:8px;
+
+.logout-icon {
+    margin-left: 8px;
 }
+
+.heading {
+    text-align: center;
+    margin-left: 230px;
+}
+
+.product-container {
+    display: grid;
+    height: 430px;
+    width: 250px;
+    border: 1px solid darkblue;
+    align-content: space-between;
+    padding: 10px;
+}
+
+.message-container {
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
+
+.message {
+    flex: 1;
+    position: fixed;
+    top: 60px;
+    left: 250px;
+    z-index: 300;
+}
+
+@media (max-width: 2000px) {
+    .main-container {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 1400px) {
+    .main-container {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 1100px) {
+    .main-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 830px) {
+    .main-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+@media (max-width: 729.98px) {
+    .main-container {
+        grid-template-columns: 1fr 1fr;
+        margin-left: 0;
+    }
+
+    .page-top {
+        top: 55px;
+        right: 0;
+        left: 0;
+    }
+
+    .heading {
+        margin-left: 0;
+    }
+
+    .message {
+        top: 110px;
+        left: 0;
+    }
+}
+
+@media (max-width: 600px) {
+    .main-container {
+        grid-template-columns: 1fr;
+        margin-left: 0;
+    }
+
+    .heading {
+        margin-left: 0;
+    }
+
+    .message {
+        top: 110px;
+        left: 0;
+    }
+}
+
+.product-img {
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    margin-bottom: 5px;
+}
+
+    .product-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+.product-price {
+    color: darkred;
+}
+
+.product-detail {
+    font-style: unset;
+}
+
+
+
+
+
+.page {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 490px;
+}
+
 
 .navigation-item {
     display: flex;
@@ -68,7 +206,8 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, darkblue 0%, rgb(122 0 7) 90%);
+    background-image: linear-gradient(180deg, rgb(0, 9, 206) 0%, rgb(122 0 7) 90%);
+    z-index: 200;
 }
 
 .top-row {
@@ -95,51 +234,47 @@ main {
             text-overflow: ellipsis;
         }
 
-@media (max-width: 640.98px) {
+@media (max-width: 729.98px) {
     main {
-        margin-top: 55px;
+        margin-top: 110px;
     }
+
     .top-row {
         justify-content: space-between;
     }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
-    }
-    .page-top {
-        top: 55px;
-        right: 0;
-        left: 0;
-        z-index: 1;
-    }
+        .top-row ::deep a, .top-row ::deep .btn-link {
+            margin-left: 0;
+        }
+
     .sidebar {
         position: fixed;
         right: 0;
         top: 0;
         left: 0;
-        z-index: 2;
     }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 730px) {
     .page {
         flex-direction: row;
     }
+
     main {
         margin-top: 55px;
-        margin-left: 230px;
     }
+
     .top-row {
         position: sticky;
         top: 0;
         z-index: 1;
     }
 
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
+        .top-row.auth ::deep a:first-child {
+            flex: 1;
+            text-align: right;
+            width: 0;
+        }
 
     .top-row, article {
         padding-left: 2rem !important;
@@ -149,13 +284,7 @@ main {
     .sidebar {
         width: 250px;
         height: 100vh;
-        position:fixed;
-    }
-
-    .page-top{
-        left:250px;
-        right:0;
-        top:0;
+        position: fixed;
     }
 }
 
