--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Client/Cart.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Client/Cart.razor
@@ -5,6 +5,58 @@
 
 <PageTitle>Cart</PageTitle>
 
+
+
+<div class="page-top">
+    <div class="search-bar"> 
+        <input type="search" @bind="searchText" name="search-bar" @onkeypress="OnKeyPress" placeholder="Search" />
+        <button @onclick="() => Search(searchText)"><img src="/icons/find.png" /></button>
+    </div>
+    <div class="navigation-item">
+        <NavLink href="order">
+            <div class="order-icon">
+                <img src="/icons/order.png" />
+            </div> 
+            <div>
+                Order
+            </div>
+        </NavLink>
+    </div>
+    <div class="navigation-item">
+        <NavLink href="cart">
+            <div>
+                <img src="/icons/shopping-cart.png" />
+            </div> 
+            <div>
+                Cart
+            </div>
+        </NavLink>
+    </div>
+    <AuthorizeView Roles="ADMIN">
+        <Authorized>
+            <div class="navigation-item">
+                <NavLink href="admin/products">
+                    <div class="admin-icon">
+                        <img src="/icons/users.png" />
+                    </div>
+                    <div>Admin</div>
+                </NavLink>
+            </div>
+        </Authorized>
+    </AuthorizeView>
+    <div class="navigation-item">
+        <NavLink href="logoutcontrol">
+            <div class="logout-icon">
+                <img src="/icons/logout.png" />
+            </div>
+            <div>
+                Logout
+            </div>
+        </NavLink>
+    </div>
+</div>
+
+
 <h3 class="heading">Cart</h3>
 
 @if (!string.IsNullOrEmpty(errorMessage))
@@ -23,96 +75,111 @@
     </div>
 }
 <div class="cart-main-container">
-    @if (cartProducts == null ){
+    @if (cartProducts == null)
+    {
+        <div>Loading...</div>
+
+        <div><i class="fas fa-spinner fa-spin"></i></div>
     }
     else
     {
         <div class="cart-product">
             @foreach(var cartProduct in cartProducts)
             {
-                <div class="product">
-                    <div class="cart-img">
-                        <img src="@cartProduct.product.ImageUrl" alt="Product image" />
-                    </div>
-                    <div class="product-detail">
-                        <div>
-                            <b>@cartProduct.product.Name</b>
+                @if(cartProduct.active == true)
+                {
+                    <div class="product">
+                        <div class="cart-img">
+                            <img src="@cartProduct.product.ImageUrl" alt="Product image" />
                         </div>
                         <div class="product-detail">
-                            @cartProduct.product.Description
+                            <div>
+                                <b>@cartProduct.product.Name</b>
+                            </div>
+                            <div class="product-detail">
+                                @cartProduct.product.Description
+                            </div>
+                            <div class="product-price">
+                                @((cartProduct.quantity / 50) * cartProduct.product.Price) TL
+                            </div>
+                            <div class="cart-buttons">
+                                <select class="cart-select" @bind="cartProduct.quantity"> 
+                                    <option value="50">50</option>
+                                    <option value="100">100</option>
+                                    <option value="150">150</option>
+                                    <option value="200">200</option>
+                                    <option value="250">250</option>
+                                    <option value="300">300</option>
+                                    <option value="350">350</option>
+                                    <option value="400">400</option>
+                                    <option value="450">450</option>
+                                    <option value="500">500</option>
+                                    <option value="1000">1000</option>
+                                </select>
+                                <button class="btn btn-primary" @onclick="()=> UpdateCart(cartProduct.id, cartProduct.quantity)">Update</button>
+                                <button class="btn btn-secondary" @onclick="()=> DeleteCart(cartProduct.id)">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        @if(totalPrice !=0)
+        {
+            <div class="product-total">
+                <div>
+                    <div>
+                        <b>Order sumary:</b>
+                    </div>
+                    <div class="summary-row">
+                        <div>
+                            Items(@totalItems):
+                        </div>
+                        <div class="item-price">
+                            @(totalPrice) TL
+                        </div>
+                    </div>
+                    <div class="summary-row">
+                        <div>
+                            Shipping and Handling:
+                        </div>
+                        <div class="items-price">
+                            @(shipping) TL
+                        </div>
+                    </div>
+                    <div class="summary-row">
+                        <div>
+                            Total Before Tax:
+                        </div>
+                        <div class="items-price">
+                            @(totalPrice + shipping) TL
+                        </div>
+                    </div>
+                    <div class="summary-row">
+                        <div>
+                            Estimated Tax:
+                        </div>
+                        <div class="items-price">
+                            @(tax) TL
+                        </div>
+                    </div>
+                    <div class="summary-row">
+                        <div class="product-price">
+                            Order Total:
                         </div>
                         <div class="product-price">
-                            @((cartProduct.quantity / 50) * cartProduct.product.Price) TL
-                        </div>
-                        <div class="cart-buttons">
-                            <select class="cart-select" @bind="cartProduct.quantity"> 
-                                <option value="50">50</option>
-                                <option value="100">100</option>
-                                <option value="150">150</option>
-                                <option value="200">200</option>
-                                <option value="250">250</option>
-                                <option value="300">300</option>
-                                <option value="350">350</option>
-                                <option value="400">400</option>
-                                <option value="450">450</option>
-                                <option value="500">500</option>
-                                <option value="1000">1000</option>
-                            </select>
-                            <button class="btn btn-primary" @onclick="()=> UpdateCart(cartProduct.id, cartProduct.quantity)">Update</button>
-                            <button class="btn btn-secondary" @onclick="()=> DeleteCart(cartProduct.id)">Delete</button>
+                            @(totalPrice + shipping + tax) TL
                         </div>
                     </div>
+                    <button class="btn btn-primary order-button" type="submit" @onclick="()=> PlaceOrder()">Place Order</button>
                 </div>
-            }
-        </div>    
-        <div class="product-total">
-            <div>
-                <div>
-                    <b>Order sumary:</b>
-                </div>
-                <div class="summary-row">
-                    <div>
-                        Items(@totalItems):
-                    </div>
-                    <div class="item-price">
-                        @(totalPrice) TL
-                    </div>
-                </div>
-                <div class="summary-row">
-                    <div>
-                        Shipping and Handling:
-                    </div>
-                    <div class="items-price">
-                        @(shipping) TL
-                    </div>
-                </div>
-                <div class="summary-row">
-                    <div>
-                        Total Before Tax:
-                    </div>
-                    <div class="items-price">
-                        @(totalPrice + shipping) TL
-                    </div>
-                </div>
-                <div class="summary-row">
-                    <div>
-                        Estimated Tax:
-                    </div>
-                    <div class="items-price">
-                        @(tax) TL
-                    </div>
-                </div>
-                <div class="summary-row">
-                    <div class="product-price">
-                        Order Total:
-                    </div>
-                    <div class="product-price">
-                        @(totalPrice + shipping + tax) TL
-                    </div>
-                </div>
-                <button class="btn btn-primary order-button" type="submit" @onclick="()=> PlaceOrder()">Place Order</button>
             </div>
-        </div>
+        
+        }
+        else
+        {
+            <div class="m-auto text-xxl-center">Your Cart Is Empty!</div>
+        }
     }
 </div>
 @code {
@@ -122,6 +189,8 @@
     private int totalItems = 0;
     private int shipping;
     private double tax;
+    private string searchText = "";
+
 
     private List<ResultCartDto> cartProducts = [];
     private UpdateCartDto updateCartDto { get; set; } = new();
@@ -137,6 +206,8 @@
         totalItems = 0;
         foreach(var cartProduct in cartProducts)
         {
+            if (cartProduct.active == false)
+                continue;
             totalPrice += (cartProduct.quantity/50) * cartProduct.product.Price;
             totalItems += cartProduct.quantity;
         }
@@ -188,4 +259,18 @@
         }
         navigationManager.NavigateTo("/order");
     }
+
+    private void Search(string searchText)
+    {
+        navigationManager.NavigateTo($"/search/{searchText}");
+    }
+
+    private void OnKeyPress(KeyboardEventArgs e)
+    {
+        if (e.Key == "Enter")
+        {
+            Search(searchText);
+        }
+    }
+
 }
