--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Client/Order.razor.css
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Client/Order.razor.css
@@ -2,8 +2,10 @@
     display: grid;
     gap: 20px;
     margin-left: 230px;
+    min-width: 490px;
 }
 .order-container {
+    word-wrap:anywhere;
     border: 1px solid darkblue;
     display: flex;
     gap: 20px;
@@ -12,6 +14,7 @@
     padding: 10px;
     place-items: center;
     min-width: 400px;
+    position: relative;
 }
 .order-img{
     height: 150px;
@@ -40,4 +43,14 @@
         grid-template-columns: 1fr;
         margin-left: 0;
     }
+}
+
+.delivered-bage {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    padding: 2px;
+    border: 1px solid darkblue;
+    border-left: none;
+    border-top: none;
 }
