--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Dashboard.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Dashboard.razor
@@ -92,7 +92,7 @@
                                         <span class="badge rounded-pill text-bg-info text-light">Delivered</span>
                                     }
                                     else{
-                                        <span class="badge rounded-pill text-bg-warning text-light">Pending...</span>
+                                        <span class="badge rounded-pill text-bg-warning text-dark">Pending...</span>
                                     }
                                 </td>
                                 <td>@order.orderDate.ToString()</td>
