--- a/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/_Imports.razor
@@ -25,5 +25,6 @@
 @using FactoryProject.Infrastructure.Utilities.Services
 @using FactoryProject.Models.IngredientDtos
 @using FactoryProject.Models.OrderDtos
+@using Microsoft.AspNetCore.Components.Authorization
 
 
