--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AdminNavMenu.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Layout/AdminNavMenu.razor
@@ -71,7 +71,7 @@
             </NavLink>
         </div>
          <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" >
+            <NavLink class="nav-link" href="biscuits">
                 <div class="d-flex justify-content-between align-items-center"> 
                     <i class="fas fa-globe ft-icon-dimension"></i>
                     <span class="menu_item">WebSite</span>
