--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/UpdateOrder.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Admin/Order/UpdateOrder.razor
@@ -30,9 +30,12 @@
         </div>
         <div class="mb-3 form-div">
             <label for="departmentSalary" class="form-label">Status</label>
-            <InputCheckbox type="text" class="@GetInputClass(nameof(order.status))"
-            id="departmentSalary" @bind-Value="order.status" />
-            <ValidationMessage For="@(() => order.status)" class="text-danger" />
+            <label class="form-label">
+                <InputCheckbox type="text" class="@GetInputClass(nameof(order.status))"
+                id="departmentSalary" @bind-Value="order.status" />
+                <ValidationMessage For="@(() => order.status)" class="text-danger" />
+                Delivered
+            </label>
         </div>
         <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-success">
@@ -41,7 +44,7 @@
             </button>
             <a href="/admin/orders" class="btn btn-secondary ms-2">
                 <i class="fas fa-list"></i>
-                Departments
+                Orders
             </a>
         </div>
     </EditForm>
@@ -49,7 +52,8 @@
 </div>
 
 @code {
-    public int orderId{ get; set; }
+    [Parameter]
+    public int orderId { get; set; }
     private string errorMessage;
     private UpdateOrderDto order = new();
     [CascadingParameter]private EditContext? editContext { get; set; }
@@ -59,6 +63,7 @@
     }
     private async Task UpdateOrderAsync()
     {
+        order.order_id = orderId;
         var result = await _unitOfWork.OrderService.UpdateOrderAsync(order);
         if (!result)
         {
@@ -72,10 +77,10 @@
     }
     private string GetInputClass(string fieldName)
     {
-        if (editContext == null) return "form-control form-input";
+        if (editContext == null) return " form-input";
         // Check if the field is valid
         var fieldIdentifier = new FieldIdentifier(order, fieldName);
         var isInvalid = editContext?.GetValidationMessages(fieldIdentifier).Any() == true;
-        return isInvalid ? "form-control form-input invalid" : " form-control form-input";
+        return isInvalid ? "form-input invalid" : "form-input";
     }
 }
