Access Denied Page Updated

--- a/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/accessdenied.razor
+++ b/FactoryManagment/FactoryProject/FactoryProject/Components/Pages/Authentication/accessdenied.razor
@@ -24,17 +24,12 @@
                 <div class="boutton">
                     <div class="row gap-2">
                         <div class="col-lg-6 col-ms-12">
-                            <a class="btn btn-primary text-nowrap" href="/">
+                        <a class="btn btn-primary text-nowrap" href="/biscuits">
                                     <i class="fas fa-store"></i>
                                     Home
                             </a>
                         </div>
-                        <div class="col-lg-4 col-ms-12">
-                            <a class="btn btn-info text-nowrap text-light" href="returlUrl">
-                                <i class="fas fa-arrow-left"></i>
-                                    Get Back
-                            </a>
-                        </div>
+        
                     </div>
                 </div>
             </div>
